Commit tela de horarios

--- a/tabela-project/front/login/index.html
+++ b/tabela-project/front/login/index.html
@@ -12,7 +12,7 @@
     <img src="../img/logo_rel.jfif" alt="Logo">
     <div class="login-container">
         <h2>Login</h2>
-        <input type="text" placeholder="Username" id="username">
+        <input type="text" placeholder="Email" id="email">
         <input type="password" placeholder="Password" id="password">
         <button onclick="login()">Entrar</button>
         <a href="../cad/index.html"><p>Não possui cadastro? Clique aqui!!</p></a>
