--- a/tabela-project/front/horarios/index.html
+++ b/tabela-project/front/horarios/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>Calendário de Aulas</title>
   <link rel="stylesheet" href="style.css">
-  
+  <!-- PARA USAR OS ÍCONES DO GOOGLE FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/db4f1d3b88.js" crossorigin="anonymous"></script>
+
+
 </head>
+
 <body>
 
   <div id="calendar">
@@ -32,8 +38,50 @@
     </table>
   </div>
 
- 
+
 
   <script src="./script.js"></script>
+
+
+<!-- MENU LATERAL -->
+<nav class="menu_lateral">
+
+  <div class="b_expandir">
+      <a id="conta" href="../conta/indes.html">
+       <i class="fa-solid fa-circle-user"></i>
+      </a>
+  </div>
+<ul>
+  <li class="item_menu">
+      <a href="../main/indes.html">
+          <span class="icon"><i class="fa-solid fa-house-chimney"></i></span>
+          <span class="txt_link">Início</span>
+      </a>
+  </li>
+
+  <li class="item_menu">
+      <a href="../horarios/index.html">
+          <span class="icon"><i class="fa-solid fa-clock"></i></span>
+          <span class="txt_link">Horários</span>
+      </a>
+  </li>
+  <li class="item_menu">
+      <a href="#">
+          <span class="icon"><i class="fa-solid fa-image"></i></span>
+          <span class="txt_link">Galeria</span>
+      </a>
+  </li>
+  <li class="item_menu">
+      <a href="../info/indes.html">
+          <span class="icon"><i class="fa-solid fa-circle-info"></i></span>
+          <span class="txt_link">Sobre</span>
+      </a>
+  </li>
+</ul>
+
+</nav>
+<!-- MENU LATERAL -->    
+
 </body>
+
 </html>
