--- a/tabela-project/front/login/index.html
+++ b/tabela-project/front/login/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Aulas</title>
+    <title>Login</title>
     <script src="back-end/script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
     <img src="../img/logo_rel.jfif" alt="Logo">
     <div class="login-container">
         <h2>Login</h2>
-        <input type="text" placeholder="Email" id="email">
+        <input type="text" placeholder="Nome Completo" id="username">
         <input type="password" placeholder="Password" id="password">
         <button onclick="login()">Entrar</button>
         <a href="../cad/index.html"><p>Não possui cadastro? Clique aqui!</p></a>
