--- a/tabela-project/front/login/index.html
+++ b/tabela-project/front/login/index.html
@@ -12,8 +12,8 @@
     <img src="../img/logo_rel.jfif" alt="Logo">
     <div class="login-container">
         <h2>Login</h2>
-        <input type="text" placeholder="Nome Completo" id="username">
-        <input type="password" placeholder="Password" id="password">
+        <input type="text" placeholder="E-mail " id="username">
+        <input type="password" placeholder="Senha" id="password">
         <button onclick="login()">Entrar</button>
         <a href="../cad/index.html"><p>Não possui cadastro? Clique aqui!</p></a>
     </div>
