--- a/tabela-project/front/docente_register/index.html
+++ b/tabela-project/front/docente_register/index.html
@@ -1,57 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <title>Registro de Professor</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-    }
+  <link rel="stylesheet" href="style.css" class="css">
+  <link rel="stylesheet" href="script.js">
+  <script src="https://kit.fontawesome.com/db4f1d3b88.js" crossorigin="anonymous"></script>
 
-    form {
-      max-width: 400px;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="tel"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      box-sizing: border-box;
-    }
-
-    button {
-      margin-top: 20px;
-      padding: 10px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-  </style>
 </head>
+
 <body>
 
   <h2>Registro de Professor</h2>
 
-  <form action="/registrar" method="post">
+  <form action="/registrar" method="post" class="box">
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" required>
 
@@ -62,10 +25,54 @@
     <input type="email" id="email" name="email" required>
 
     <label for="telefone">Telefone:</label>
-    <input type="tel" id="telefone" name="telefone" required pattern="\(\d{2}\)\s\d{4,5}-\d{4}" placeholder="(99) 99999-9999">
+    <input type="tel" id="telefone" name="telefone" required pattern="\(\d{2}\)\s\d{4,5}-\d{4}"
+      placeholder="(99) 99999-9999">
 
     <button type="submit">Registrar</button>
   </form>
 
+
+    <!-- MENU LATERAL -->
+    <nav class="menu_lateral">
+
+      <div class="b_expandir">
+          <a id="conta" href="../conta/indes.html">
+              <i class="fa-solid fa-circle-user"></i>
+          </a>
+      </div>
+      <ul>
+          <li class="item_menu">
+              <a href="../main/indes.html">
+                  <span class="icon"><i class="fa-solid fa-house-chimney"></i></span>
+                  <span class="txt_link">Início</span>
+              </a>
+          </li>
+
+          <li class="item_menu">
+              <a href="../horarios/index.html">
+                  <span class="icon"><i class="fa-solid fa-clock"></i></span>
+                  <span class="txt_link">Horários</span>
+              </a>
+          </li>
+          <li class="item_menu">
+              <a href="#">
+                  <span class="icon"><i class="fa-solid fa-image"></i></span>
+                  <span class="txt_link">Galeria</span>
+              </a>
+          </li>
+          <li class="item_menu">
+              <a href="../info/indes.html">
+                  <span class="icon"><i class="fa-solid fa-circle-info"></i></span>
+                  <span class="txt_link">Sobre</span>
+              </a>
+          </li>
+      </ul>
+
+  </nav>
+  <!-- MENU LATERAL -->
+
+
+
 </body>
+
 </html>
