--- a/tabela-project/front/conta/indes.html
+++ b/tabela-project/front/conta/indes.html
@@ -46,33 +46,6 @@
         </div>
     </div>
 
-
-    <!--   PRIMEIRA VERSÃO
-
-    <div class="container">
-        <div class="caixa">
-            <img id="anonimo" src="https://i.pinimg.com/736x/e5/df/45/e5df457e8de5d0aae37691c00e8a672e.jpg"
-                alt="anonimo">
-
-            <a href="../login/index.html">
-
-                <div class="bt_sair"> <i class="fa-solid fa-right-from-bracket"></i> </div>
-
-            </a>
-            <a href="../login/index.html">
-            <div class="sair"> <b> Sair </b> </div>
-        </a>
-            <div class="info" id="Email"> Email
-
-            </div>
-            <div class="info" id="Mensagem_1"> <b> Olá, *Nome completo* ! </b> </div>
-            <div class="info" id="Mensagem_2"> <b> *Cargo* </b> </div>
-            <div class="info" id="Mensagem_3"> "A palavra convence, mas o exemplo arrasta" </div>
-        </div>
-    </div>
- -->
-
-
     <!-- MENU LATERAL -->
     <nav class="menu_lateral">
 
@@ -96,9 +69,9 @@
                 </a>
             </li>
             <li class="item_menu">
-                <a href="#">
-                    <span class="icon"><i class="fa-solid fa-image"></i></span>
-                    <span class="txt_link">Galeria</span>
+                <a href="/tabela-project/front/question/indes.html">
+                    <span class="icon"><i class="fa-solid fa-address-card"></i></span>
+                    <span class="txt_link">Registrar</span>
                 </a>
             </li>
             <li class="item_menu">
@@ -111,6 +84,7 @@
 
     </nav>
     <!-- MENU LATERAL -->
+  
 </body>
 
 </html>
