--- a/tabela-project/front/login/index.html
+++ b/tabela-project/front/login/index.html
@@ -16,6 +16,10 @@
         <input type="password" placeholder="Senha" id="password">
         <button onclick="login()">Entrar</button>
         <a href="../cad/index.html"><p>Não possui cadastro? Clique aqui!</p></a>
+        
+        <!-- LINK PARA A TELA DE MENU -->
+        <!-- <a href="../cad/index.html"></a> -->
+        
     </div>
 
 </body>
