--- a/tabela-project/front/main/indes.html
+++ b/tabela-project/front/main/indes.html
@@ -66,44 +66,44 @@
 
 
 
-<!-- MENU LATERAL -->
-<nav class="menu_lateral">
+    <!-- MENU LATERAL -->
+    <nav class="menu_lateral">
 
-    <div class="b_expandir">
-        <a id="conta" href="../conta/indes.html">
-         <i class="fa-solid fa-circle-user"></i>
-        </a>
-    </div>
-<ul>
-    <li class="item_menu">
-        <a href="../main/indes.html">
-            <span class="icon"><i class="fa-solid fa-house-chimney"></i></span>
-            <span class="txt_link">Início</span>
-        </a>
-    </li>
+        <div class="b_expandir">
+            <a id="conta" href="../conta/indes.html">
+                <i class="fa-solid fa-circle-user"></i>
+            </a>
+        </div>
+        <ul>
+            <li class="item_menu">
+                <a href="../main/indes.html">
+                    <span class="icon"><i class="fa-solid fa-house-chimney"></i></span>
+                    <span class="txt_link">Início</span>
+                </a>
+            </li>
 
-    <li class="item_menu">
-        <a href="../horarios/index.html">
-            <span class="icon"><i class="fa-solid fa-clock"></i></span>
-            <span class="txt_link">Horários</span>
-        </a>
-    </li>
-    <li class="item_menu">
-        <a href="#">
-            <span class="icon"><i class="fa-solid fa-image"></i></span>
-            <span class="txt_link">Galeria</span>
-        </a>
-    </li>
-    <li class="item_menu">
-        <a href="../info/indes.html">
-            <span class="icon"><i class="fa-solid fa-circle-info"></i></span>
-            <span class="txt_link">Sobre</span>
-        </a>
-    </li>
-</ul>
+            <li class="item_menu">
+                <a href="../horarios/index.html">
+                    <span class="icon"><i class="fa-solid fa-clock"></i></span>
+                    <span class="txt_link">Horários</span>
+                </a>
+            </li>
+            <li class="item_menu">
+                <a href="/tabela-project/front/question/indes.html">
+                    <span class="icon"><i class="fa-solid fa-address-card"></i></span>
+                    <span class="txt_link">Registrar</span>
+                </a>
+            </li>
+            <li class="item_menu">
+                <a href="../info/indes.html">
+                    <span class="icon"><i class="fa-solid fa-circle-info"></i></span>
+                    <span class="txt_link">Sobre</span>
+                </a>
+            </li>
+        </ul>
 
-</nav>
-<!-- MENU LATERAL -->    
+    </nav>
+    <!-- MENU LATERAL --> 
 
 </body>
 
