--- a/tabela-project/front/docente_register/index.html
+++ b/tabela-project/front/docente_register/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <form action="/registrar" method="post" class="box">
-      <h1 id="titulo">Registrar de Professor</h1>
+      <h1 id="titulo">Registro de Professor</h1>
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" required>
 
