--- a/tabela-project/front/login/index.html
+++ b/tabela-project/front/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <script src="back-end/script.js"></script>
+    <script src="login.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     <img src="../img/logo_rel.jfif" alt="Logo">
     <div class="login-container">
         <h2>Login</h2>
-        <input type="text" placeholder="E-mail " id="username">
-        <input type="password" placeholder="Senha" id="password">
+        <input type="text" placeholder="E-mail " id="email">
+        <input type="password" placeholder="Senha" id="senha">
         <button onclick="login()">Entrar</button>
         <a href="../cad/index.html"><p>Não possui cadastro? Clique aqui!</p></a>
         
