--- a/tabela-project/front/info/indes.html
+++ b/tabela-project/front/info/indes.html
@@ -45,8 +45,8 @@
     <img src="../img/info_daev.png" alt="densenvolvedor" class="card-img">
     <div class="card-content">
         <h2 class="card-title">Davi Souza</h2>
-        <p class="card-text"> Acrescentou ao projeto o banco de dados utilizando o
-            <span class="pchave">Mysql</span> e teve participação no desenvolvimento do projeto com as 
+        <p class="card-text"> Responsável pela criação do banco de dados,
+            <span class="pchave">Mysql</span>, e teve participação no desenvolvimento do projeto com as 
             tecnologias <span class="pchave">Html</span> e <span class="pchave">CSS</span>.
         </p>
         <div class="botoes-container">
@@ -119,7 +119,7 @@
     <nav class="menu_lateral">
 
         <div class="b_expandir">
-            <a id="conta" href="../conta/indes.html">
+            <a id="conta" href="../conta/index.html">
                 <i class="fa-solid fa-circle-user"></i>
             </a>
         </div>
@@ -138,9 +138,9 @@
                 </a>
             </li>
             <li class="item_menu">
-                <a href="/tabela-project/front/question/indes.html">
+                <a href="/tabela-project/front/docente_register/index.html">
                     <span class="icon"><i class="fa-solid fa-address-card"></i></span>
-                    <span class="txt_link">Registrar</span>
+                    <span class="txt_link">Registrar Docente</span>
                 </a>
             </li>
             <li class="item_menu">
