--- a/tabela-project/front/main/indes.html
+++ b/tabela-project/front/main/indes.html
@@ -70,7 +70,7 @@
     <nav class="menu_lateral">
 
         <div class="b_expandir">
-            <a id="conta" href="../conta/indes.html">
+            <a id="conta" href="../conta/index.html">
                 <i class="fa-solid fa-circle-user"></i>
             </a>
         </div>
@@ -89,9 +89,9 @@
                 </a>
             </li>
             <li class="item_menu">
-                <a href="/tabela-project/front/question/indes.html">
+                <a href="/tabela-project/front/docente_register/index.html">
                     <span class="icon"><i class="fa-solid fa-address-card"></i></span>
-                    <span class="txt_link">Registrar</span>
+                    <span class="txt_link">Registrar Docente</span>
                 </a>
             </li>
             <li class="item_menu">
@@ -103,8 +103,7 @@
         </ul>
 
     </nav>
-    <!-- MENU LATERAL --> 
-
+    <!-- MENU LATERAL -->
 </body>
 
 </html>
