--- a/tabela-project/front/question/indes.html
+++ b/tabela-project/front/question/indes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilo.css">
     <!-- PARA USAR OS ÍCONES DO GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="back-end/script.js"></script>
     <script src="https://kit.fontawesome.com/db4f1d3b88.js" crossorigin="anonymous"></script>
 </head>
@@ -18,19 +19,21 @@
     <div class="boxGif">
         <img src="/tabela-project/front/gif/questions-animate.svg" class="gif" alt="pergunta">
         <div class="pergunta">
-            <div class="pg_principal">
-                Qual cargo deseja adicionar?
+            <div class="pgs">
+                <div class="pg_princ">
+                    Qual cargo deseja adicionar?
+                </div>
                 <div class="pg01">
                     <a href="/tabela-project/front/docente_register/index.html">
                         <button class="bt_docente">
-                            <i class="fa-solid fa-plus"> Docente</i>
+                            <b>Docente</b>
                         </button>
                     </a>
                 </div>
                 <div class="pg02">
                     <a href="">
                         <button class="bt_coordenador">
-                            <i class="fa-solid fa-plus"> Coordenador</i>
+                            <b>Coordenador</b>
                         </button>
                     </a>
                 </div>
@@ -57,7 +60,7 @@
     <nav class="menu_lateral">
 
         <div class="b_expandir">
-            <a id="conta" href="../conta/indes.html">
+            <a id="conta" href="../conta/index.html">
                 <i class="fa-solid fa-circle-user"></i>
             </a>
         </div>
@@ -76,9 +79,9 @@
                 </a>
             </li>
             <li class="item_menu">
-                <a href="/tabela-project/front/question/indes.html">
+                <a href="/tabela-project/front/docente_register/index.html">
                     <span class="icon"><i class="fa-solid fa-address-card"></i></span>
-                    <span class="txt_link">Registrar</span>
+                    <span class="txt_link">Registrar Docente</span>
                 </a>
             </li>
             <li class="item_menu">
